# empresa-django-api

./: .gitignore  Dockerfile  Makefile  README.md  SGE_Django.postman_collection.json  db.sqlite3  docker-compose.yml  requirements.txt
app/: pyproject.toml
appEmpresaDjango/: models.py  permissions.py  serializers.py  urls.py  views.py
empresaDjango_api/: settings.py  urls.py
